--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p> Siempre en búsqueda de nuevos desafíos y habilidades que me
               permitan concretar las ideas y lograr resultados satisfactorios en cada uno de mis
               proyectos. </p>
-
+            <p>De formación autodidacta, facilitada por el manejo de inglés avanzado.</p>
           </div>
         </div>
       </div>
