--- a/index.html
+++ b/index.html
@@ -111,7 +111,16 @@
               <img src="assets/img/icons/css3.svg" alt="">
             </div>
           </div>
-
+          <div class="col-6 mb-5 col-md-4 col-lg-2 mb-md-4 d-flex justify-content-center">
+            <div class="skill" data-toggle="tooltip" data-placement="bottom" title="JavaScript">
+              <img src="assets/img/icons/javascript.svg" alt="">
+            </div>
+          </div>
+          <div class="col-6 mb-5 col-md-4 col-lg-2 mb-md-4 d-flex justify-content-center">
+            <div class="skill" data-toggle="tooltip" data-placement="bottom" title="Sass">
+              <img src="assets/img/icons/sass.svg" alt="">
+            </div>
+          </div>
           <div class="col-6 mb-md-5 col-md-4 col-lg-2 mb-md-4 d-flex justify-content-center">
             <div class="skill" data-toggle="tooltip" data-placement="bottom" title="Adobe After Effects">
               <img src="assets/img/icons/aftereffects.svg" alt="">
